--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
+    <title>Document</title> 
+
 </head>
 <body>
+
+    <button class="paper">paper</button>
+    <button class="mybutton">scissors</button>
+    <button class="mybutton">rock</button>
     
+   <script src="script.js"></script>
+
 </body>
 </html>
