creating the functions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-    <button class="paper">paper</button>
-    <button class="mybutton">scissors</button>
-    <button class="mybutton">rock</button>
+    <button class="start">start</button>
+    <button class="theButton paper">paper</button>
+    <button class="theButton scissors">scissors</button>
+    <button class="theButton rock">rock</button>
     
    <script src="script.js"></script>
 
