4/26 04:41 finish js part

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div>Computer's point</div>
         </div>
 
+        <div class="hint"></div>
+        
         <div class="points">
             <div class="my_point">0</div>
             <div class="com_point">0</div>
